Update templates and style.css files

--- a/apps/book/templates/book/index.html
+++ b/apps/book/templates/book/index.html
@@ -3,8 +3,16 @@
 {% block content %}
 
 <!-- index.html content starts here -->
-<div class="container-fluid">
-    <h1 class="mt-4 mb-3">Welcome to the Book App</h1>
+<div class="col-md-12 prueba">
+    <!-- <div class="card bg-primary">
+        <div class="card-body">
+            <blockquote class="blockquote mb-0 text-light text-center">
+                <h1 class="text-light">{{ user.username | upper }}!
+                    <br> Welcome to Bookaroo!
+                </h1>
+            </blockquote>
+        </div>
+    </div> -->
 </div>
 
 <!-- index.html content ends here -->
