--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,12 @@
 {# templates/base.html #}
 {% load static %}
 
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
+{% url 'account_change_password' as change_password_url %}
+{% url 'account_reset_password' as reset_password_url %}
+
 <!doctype html>
 <html lang="en">
 
