--- a/templates/base.html
+++ b/templates/base.html
@@ -225,7 +225,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS -->
-    <script src="{% static 'js/main.js' %}"></script>
+    <!-- <script src="{% static 'js/main.js' %}"></script> -->
 
     {% block extra_js %}{% endblock extra_js %}
 </body>
