Add members app with initial configuration and models

--- a/apps/book/templates/book/index.html
+++ b/apps/book/templates/book/index.html
@@ -7,7 +7,7 @@
     <!-- <div class="card bg-primary">
         <div class="card-body">
             <blockquote class="blockquote mb-0 text-light text-center">
-                <h1 class="text-light">{{ user.username | upper }}!
+                <h1 class="text-light">{{ user.username | upper }}
                     <br> Welcome to Bookaroo!
                 </h1>
             </blockquote>
