--- a/apps/book/templates/book/index.html
+++ b/apps/book/templates/book/index.html
@@ -4,7 +4,8 @@
 
 <!-- index.html content starts here -->
 <div class="col-md-12 prueba">
-    <!-- <div class="card bg-primary">
+
+    <div class="card bg-primary">
         <div class="card-body">
             <blockquote class="blockquote mb-0 text-light text-center">
                 <h1 class="text-light">{{ user.username | upper }}
@@ -12,7 +13,7 @@
                 </h1>
             </blockquote>
         </div>
-    </div> -->
+    </div>
 </div>
 
 <!-- index.html content ends here -->
