--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,29 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="#"><i class="fa fa-table me-2"></i> Authors List</a>
+                                    <a class="dropdown-item" href="{% url 'book:list_authors' %}"><i
+                                            class="fa fa-table me-2"></i> Authors List</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'book:create_author' %}"><i
+                                            class="fa fa-table me-2"></i> Register
+                                        Author</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">
+                                <i class="fa fa-users me-2"></i> Books
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'book:books_list' %}">
+                                        <i class="fa fa-table me-2"></i> Books List</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'book:create_book' %}">
+                                        <i class="fa fa-table me-2"></i> Create Book</a>
                                 </li>
                             </ul>
                         </li>
@@ -195,7 +217,7 @@
             </nav>
 
             <!-- Main content -->
-            <main class="container-fluid py-3">
+            <main class="main_right container-fluid py-3">
                 <div class="row">
                     <div class="col-12">
                         {% block content %}{% endblock content %}
