--- a/templates/base.html
+++ b/templates/base.html
@@ -170,8 +170,9 @@
                     <div class="collapse navbar-collapse" id="topnav">
                         <ul class="navbar-nav ms-auto align-items-center">
                             <li class="nav-item dropdown"> -->
-                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center me-4"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <h4 class="me-4">{{ user.username | capfirst }}</h4>
                         <img class="rounded-circle me-2" src="{% static 'images/admin.png' %}" alt="User Avatar"
                             width="32" height="32">
                     </a>
