--- a/apps/book/templates/book/books/books_list.html
+++ b/apps/book/templates/book/books/books_list.html
@@ -6,7 +6,7 @@
 <div class="container mt-4">
     <h1 class="h4 m-0">List of Books</h1>
 
-    {% if object_list %}
+    {% if books %}
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead class="table-light">
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for book in object_list %}
+                {% for book in books %}
                 <tr>
                     <td scope="row">{{ book.id }}</td>
                     <td>{{ book.title }}</td>
@@ -30,7 +30,7 @@
                     </td>
                     <td>
                         <a href="{% url 'book:edit_book' book.id %}" class="btn btn-sm btn-warning">Edit</a>
-                        <a href="" class="btn btn-sm btn-danger">Delete</a>
+                        <a href="{% url 'book:delete_book' book.id %}" class="btn btn-sm btn-danger">Delete</a>
                     </td>
 
 
@@ -48,5 +48,8 @@
         No books found.
     </div>
     {% endif %}
+
+
 </div>
+
 {% endblock content %}
