--- a/apps/book/templates/book/books/create_book.html
+++ b/apps/book/templates/book/books/create_book.html
@@ -3,12 +3,13 @@
 {% block content %}
 
 <div class="container mt-4">
-    <h2>Create Book</h2>
+    <h2>Register Form</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Register</button>
+        <button type="submit" class="btn btn-success">Save</button>
     </form>
+</div>
 
-    {% endblock content %}
+{% endblock content %}
