Implement book reservation feature: add BookReservation model, views, and templates; update Book model and forms to include new fields

--- a/apps/book/templates/book/books/books_list.html
+++ b/apps/book/templates/book/books/books_list.html
@@ -13,7 +13,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Title</th>
-                    <th scope="col">Publish Date</th>
+                    <th scope="col">Published Date</th>
                     <th scope="col">Author</th>
                 </tr>
             </thead>
