--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,8 @@
                                 <i class="fa fa-book me-2"></i> Books
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#"><i class="fa fa-table me-2"></i> Available
+                                <li><a class="dropdown-item" href="{% url 'book:available_books_list' %}"><i
+                                            class="fa fa-table me-2"></i> Available
                                         Books</a></li>
                                 <li><a class="dropdown-item" href="#"><i class="fa fa-table me-2"></i> Reserved
                                         Books</a></li>
@@ -249,6 +250,8 @@
 
     <!-- Custom JS -->
     <!-- <script src="{% static 'js/main.js' %}"></script> -->
+    <!-- jQuery (necessary for AJAX and other functionalities) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     {% block extra_js %}{% endblock extra_js %}
 </body>
