--- a/templates/base.html
+++ b/templates/base.html
@@ -222,6 +222,15 @@
             <main class="main_right container-fluid py-3">
                 <div class="row">
                     <div class="col-12">
+                        <!-- Messages -->
+                        <!-- {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
+                        {% endif %} -->
                         {% block content %}{% endblock content %}
                     </div>
                 </div>
@@ -253,7 +262,23 @@
     <!-- jQuery (necessary for AJAX and other functionalities) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    {% block extra_js %}{% endblock extra_js %}
+    {% block extra_js %}
+    {% if messages %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            {% for message in messages %}
+            Swal.fire({
+                icon: "{% if 'error' in message.tags %}error{% elif 'warning' in message.tags %}warning{% elif 'info' in message.tags %}info{% else %}success{% endif %}",
+                title: "{{ message|escapejs }}",
+                showConfirmButton: false,
+                timer: 3000
+            });
+            {% endfor %}
+        });
+    </script>
+    {% endif %}
+
+    {% endblock extra_js %}
 </body>
 
 </html>
